Fix issue where dataset names that are too long overlap health gauge

--- a/wherehows-web/app/styles/layout/_dataset.scss
+++ b/wherehows-web/app/styles/layout/_dataset.scss
@@ -6,9 +6,9 @@
 }
 
 .dataset-name {
-  max-width: item-spacing(9) * 10;
+  max-width: item-spacing(8) * 11;
   padding-right: item-spacing(3);
-  overflow: hidden;
+  word-wrap: break-word;
   text-overflow: ellipsis;
   margin: 0;
 }
